fix: style tweaks
always truncate legend items if there are more than 2 items

when legend is "vertical" or "right" and the browser shrinks
the legend essentially becomes a "bottom" legend in that scenario

Make sure the chart shrinks to accomodate for when the legend snaps
to the bottom when the mobile breakpoint is hit

Make sure the legend expands to full width when the mobile breakpoint is hit

--- a/packages/analytics/analytics-chart/src/styles/chart.scss
+++ b/packages/analytics/analytics-chart/src/styles/chart.scss
@@ -26,7 +26,7 @@
 
       // Allow chart to expand full width on mobile
       @media (max-width: ($kui-breakpoint-phablet - 1px)) {
-        height: 100% !important;
+        max-height: calc(100% - 60px) !important;
         width: 100% !important;
       }
     }
